--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>kL'site</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-
-<body>
-    Hi,I'm here.
-</body>
-
-</html>
+---
+　　layout: default
+　　title: kL'site
+---
+<h2>{{ page.title }}</h2>
+<p>最新文章</p>
+<ul>
+    {% for post in site.posts %}
+    <li>
+        {{ post.date | date_to_string }}
+        <a href="{{ site.baseurl }}{{ post.url }}">
+            {{ post.title }}
+        </a>
+    </li>
+    {% endfor %}
+</ul>
